# CG-P3

./: .gitignore  CMakeLists.txt  requirements.sh
res/shaders/: basic.vert.glsl  phong.frag.glsl  phong.vert.glsl
src/: main.cpp
src/app/: BasicApplication.cpp  BasicApplication.h  Camera.cpp  Camera.h  Gui.cpp  Gui.h  Time.cpp  Time.h
src/game/: Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Player.cpp  Player.h
src/py/: main.py
src/rendering/: GLWindow.cpp  GLWindow.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
